test_suite/tests/ui/duplicate-attribute/rename-ser-ser.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(rename(serialize = "x", serialize = "y"))]
    x: (),
}

fn main() {}
